# Nishimura

./: README.md
JSAI/: data.tex  (+1 more)
Sources/: 0131EnemyRandom.h5  CardGameEnv.py  CardGameEnv2.py  CardGameProblem.py  CustomEpsGreedy.py  Dockerfile  ELAgent.py  GA.py  MCS.py  MCS_train.py  Makefile  Problem.py  Q_learning.py  card.py  cardeffect.py  deck.py  deck_diff_cnt.py  ga_randomrun.py  ga_run_limit.py  ga_sample.py  load_model.py  load_model_make_table.py  make_3D_graph.py  make_graph.py  make_graph_copy.py  montecarlo.py  note.txt  nsga2_cardgame.py  nsga2_cardgame_2objective.py  nsga2_cardgame_3objective.py  nsga2_cardgame_test.py  nsga2_discrete_test.py  nsga2_evolution.py  nsga2_individual.py  nsga2_problem.py  nsga2_test.py  nsga2_utils.py  player1.py  player2.py  pyproject.toml  (+7 more)
Sources/12-14/: 3000000First.h5
Sources/12-4/: 5000000stepFirst.h5
Sources/model_data/: 0109ReEnv2First1000000.h5  0110BlockingFirst1000000.h5  0110First1000000.h5  0110decay30First1000000.h5  0111EnemyChangeFirst3000000.h5  0111step30First1000000.h5  0112decay30First1000000.h5  0116stepFirst10000.h5  01170101NewDeck.h5
Sources/note/1122/: 150000stepFirst.h5  result.txt
Sources/result/100000/: result.txt
Sources/result/200000/: result.txt
Sources/result/50000/: result.txt
Sources/result/re100000/: 100000stepFirst.h5  result.txt
Sources/result/re150000/: 150000stepFirst.h5  result.txt
Sources/result/re50000_/: 50000stepFirst.h5  result.txt
Sources/result/rere10000/: 10000stepFirst.h5  result.txt
Sources/前環境/: CardGameEnv.py  Dockerfile  card.py  deck.py  train.py
(+134 files in other folders)
