[tool.poetry]
name = "cardgame env"
version = "0.1.0"
description = "This is nishimura's cardgameenv"
authors = ["nisk36"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
